--- a/.github/workflows/main_wikinobel.yml
+++ b/.github/workflows/main_wikinobel.yml
@@ -28,7 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install beautifulsoup4, wikipedia
+        run: pip install beautifulsoup4 wikipedia
         
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
